Fixed truncated token activity message in TPS UI.
The TPS UI has been modified to display the token activity message
in a textarea to avoid truncation.

The UI framework class has been modified to handle textarea.

The CSS has been modified to align the field label with the top of
textarea.

https://fedorahosted.org/pki/ticket/2299

--- a/dogtag/common-ui/shared/css/pki-ui.css
+++ b/dogtag/common-ui/shared/css/pki-ui.css
@@ -71,6 +71,7 @@ fieldset label {
   min-width: 150px;
   display: inline-block;
   line-height: 30px;
+  vertical-align: top;
 }
 
 fieldset input {
